<resources>
    <!--  Main Page  -->
    <string name="logo_title">TodoJoda</string>
    <string name="main_titleLocation">Localidad</string>
    <string name="main_location">Mar del Plata</string>
    <string name="btn_next">Siguiente</string>

    <!--  Register Page  -->
    <string name="register_title">Registrarse</string>
    <string name="register_name">Ingrese su nombre</string>

    <!--  Categories Page  -->
    <string name="sub_title">Elegie lo que Buscas</string>
    <string name="categories_title">Categorias</string>
    <string name="amigos">Amigos</string>
    <string name="previa">Previa</string>
    <string name="boliche">Boliche</string>
    <string name="encuentros">Encuentros</string>
    <string name="restaurante">Restaurantes</string>
    <string name="playa">Playa</string>

    <!--  Bottom Bar  -->
    <string name="inicio">Inicio</string>
    <string name="perfil">Perfil</string>

    <!--  Boliche Page  -->
    <string name="boliche_title">Boliche</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="passline">Passline</string>

    <!--  Boliche Home Page  -->
    <string name="selection">Seleccion</string>
    <string name="hello">Hola</string>
    <string name="user_name">Nombre del Cliente</string>

    <!--  Boliche Detail Page  -->
    <string name="call_detail">Llamar</string>
    <string name="btn_opine">Opinar</string>
    <string name="btn_opinions">Ver Opiniones</string>

    <!--  Boliche Opinions Page  -->
    <string name="opinions">Opiniones</string>
    <string name="excelente">Excelente</string>
    <string name="muy_bueno">Muy Bueno</string>

    <!--  App Bar Main Page  -->
    <string name="typeSelected">Boliche</string>

    <!--  Item Boliche Page  -->
    <string name="titleBoliche">Titulo</string>
    <string name="descriptionBoliche">Descripcion</string>
    <string name="ratingBoliche">Rating Count</string>
    <string name="promedio">Promedio</string>
    <string name="mala">Mala</string>
    <string name="horrible">Horrible</string>

    <!--  Item Opinion Page  -->
    <string name="nameUserOpinion">Nombre</string>
    <string name="titleOpinion">Titulo de la Opinion</string>
    <string name="descriptionOpinion">Descripcion de la Opinion</string>

    <!--  Boliche Opinion Page  -->
    <string name="ratingCountBoliche">4.5</string>
    <string name="cantOpinionsBoliche">123 opiniones</string>
    <string name="cantTypeBoliche">0</string>

    <!--  Profile Page  -->
    <string name="actividad">Actividad</string>
    <string name="datosPersonales">Datos Personales</string>
    <string name="ayuda">Ayuda</string>
    <string name="favoritos">Favoritos</string>
    <string name="gmail">Gmail</string>

    <!--  Profiles Pages  -->
    <string name="btn_modified">Modificar</string>
    <string name="btn_back">Volver</string>

    <!--  Datos Personales Profile Page  -->
    <string name="dni">Dni</string>
    <string name="phone">Telefono</string>


</resources>