<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".bolicheFragments.BolicheOpinionsFragment">

    <ImageView
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_icon_volver"
        android:layout_margin="20dp"/>

    <LinearLayout
        android:id="@+id/info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="30dp"
            android:fontFamily="@font/poppins_bold"
            android:textColor="@color/text"
            android:text="@string/opinions"
            android:textSize="24sp"/>

        <!-- Aquí va el resumen de las opiniones -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_bold"
                android:layout_marginEnd="15dp"
                android:textColor="@color/text"
                android:textSize="24sp"
                android:text="@string/ratingCountBoliche" />

            <RatingBar
                android:id="@+id/ratingBar"
                style="?android:attr/ratingBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:numStars="5"
                android:rating="5"
                android:stepSize="1"
                android:progressTint="@color/correct"
                android:layout_marginTop="11dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/cantOpinionsBoliche"
                android:textColor="@color/text_light" />

        </LinearLayout>

        <!-- Aquí van las columnas de opiniones -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/excelente"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/excelente"
                    android:textColor="@color/text" />

                <TextView
                    android:id="@+id/excelenteCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_toEndOf="@+id/excelente"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/cantTypeBoliche"
                    android:textColor="@color/text_light" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/muyBueno"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/muy_bueno"
                    android:fontFamily="@font/poppins_regular"
                    android:textColor="@color/text"/>

                <TextView
                    android:id="@+id/muyBuenoCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_toEndOf="@+id/muyBueno"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/cantTypeBoliche"
                    android:textColor="@color/text_light" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/promedio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/promedio"
                    android:fontFamily="@font/poppins_regular"
                    android:textColor="@color/text"/>

                <TextView
                    android:id="@+id/promedioCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_toEndOf="@+id/promedio"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/cantTypeBoliche"
                    android:textColor="@color/text_light" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/malo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mala"
                    android:fontFamily="@font/poppins_regular"
                    android:textColor="@color/text"/>

                <TextView
                    android:id="@+id/maloCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_toEndOf="@+id/malo"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/cantTypeBoliche"
                    android:textColor="@color/text_light" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/horrible"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/horrible"
                    android:fontFamily="@font/poppins_regular"
                    android:textColor="@color/text"/>

                <TextView
                    android:id="@+id/horribleCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_toEndOf="@+id/horrible"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/cantTypeBoliche"
                    android:textColor="@color/text_light" />

            </RelativeLayout>

        </LinearLayout>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/info">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/bolichesOpinionsRecycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal"
            android:scrollbars="horizontal" />
    </ScrollView>
</RelativeLayout>